# lasermac

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
lasermac/: __init__.py  app.py  cli_main.py  gcode.py  grbl.py  image_converter.py  layers.py  power_tester.py  preview.py  profiles.py  project.py  svg_converter.py  theme.py  updater.py
lasermac/widgets/: __init__.py  connection.py  console.py  controls.py  draw_canvas.py  job_panel.py  properties_panel.py  status_bar.py  toolbar.py
tests/: test_cli.py  test_draw_canvas.py  test_gcode.py  test_grbl.py  test_image_converter.py  test_layers.py  test_power_tester.py  test_profiles.py  test_project.py  test_updater.py
